2008-10-22  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (im_chooser_simple_set_property): Fix not
	displaying the translation.

	* src/main.c (main): Show the log out button if restart is required
	for something.

2008-10-10  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (im_chooser_simple_get_widget): code cleanup
	and change the option order.

2008-09-15  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (im_chooser_simple_show_status_icon_on_toggled): 
	new.
	(im_chooser_simple_get_widget): Add an option whether or not
	the applet icon is displayed at the systray. (rhbz#460703)

2008-09-01  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser.desktop.in.in (Icon): Get rid of the extension.

2008-08-27  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (im_chooser_simple_set_property): set proper
	label according to the request.

	* src/main.c (main): set proper notice type according to the current
	envvars.

2008-08-18  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (im_chooser_simple_show_error): remove
	the timout source before opening a dialog to prevent unable to take
	any action on the dialog.
	(im_chooser_simple_show_error): destroy the dialog.

2008-07-15  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (_im_chooser_simple_update_im_list):
	show up the icon if available in IMInfo. (rhbz#454371)

2008-07-08  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (im_chooser_simple_set_property):
	toggle showing up the note.
	(im_chooser_simple_get_widget): show up the note as needed.

	* src/main.c (_im_changed_cb): new.
	(_dialog_response_cb): Add GTK_RESPONSE_APPLY handler.
	(main): run as GNOME apps to deal with the log out button.

	* configure.ac: requires libgnomeui-2.0 again.

2008-06-27  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (_im_chooser_simple_update_im_list): Invoke
	exit(2) instead of gtk_main_quit().

2008-06-12  Akira TAGOH  <tagoh@redhat.com>
