@@ -1,3 +1,8 @@
+2009-02-23  Akira TAGOH  <tagoh@redhat.com>
+
+	* src/im-chooser-simple.c: Update for imsettings-0.106.0.
+	* requires: require imsettings 0.106.0.
+
 2008-10-22  Akira TAGOH  <tagoh@redhat.com>
 
 	* src/im-chooser-simple.c (im_chooser_simple_set_property): Fix not
